[gd_scene load_steps=2 format=3 uid="uid://crcf5re6eu3vr"]

[ext_resource type="Script" uid="uid://cpq8uxv1eoojf" path="res://addons/find_usages/find_usages_dock.gd" id="1_aqoht"]

[node name="FindUsagesDock" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqoht")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InputLineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Search"

[node name="StatusLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Enter an identifier to find usages"

[node name="ResultsTree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
